# ebe-python

./: .gitignore  README.md  factorization.py  justfile  modular.py  number_theory.py  numth.ini  numth.py  primality.py  progress.txt  pyproject.toml  root_D.py  setup.py  test_basic.py  test_modular.py  test_polynomial.py  test_primality.py  test_quadratic.py  test_quaternion.py  test_rational.py
lib/: __init__.py  config.py  utils.py
numth/: __init__.py  basic.py  config.py  factorization.py  factorization_algorithms.py  factorization_alt.py  interesting_number.py  main.py  miller_rabin.py  miller_rabin_primality.py  modular.py  numth.py  polynomial.py  primality.py  primality_lucas.py  primality_miller_rabin.py  quadratic.py  quaternion.py  rational.py  sums_of_squares.py  test_main.py  test_primality.py  test_rational.py
old/: factorization.py  main.py  modular~~.py  primality.py  quaternion~~.py  rational.py  test_basic~~.py  test_main.py  test_primality.py
testing/: algebraic_extensions.py  modular.py  number_theory.py  rings_and_fields.py  root_D.py
tests/: algebraic_structures_test.py  basic_test.py  continued_fraction_test.py  env.py  factorization_test.py  lucas_sequence_test.py  modular_test.py  primality_test.py  rational_approximation_test.py  sequences_lucas_test.py  sequences_test.py  test_algebraic_structures.py  test_lucas_sequence.py  test_rational_approximation.py  test_types_polynomial.py  test_types_quadratic.py  test_types_quaternion.py  test_types_rational.py  types_gaussian_integer_test.py  types_gaussian_rational_test.py  utils_test.py  (+7 more)
(+119 files in other folders)
