[tool.poetry]
name = "ebe"
version = "0.1.0"
description = "A number theory package for Python"
authors = ["itscomputers <its_computers@protonmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
pytest = "^8.0.0"
hypothesis = "^6.24.3"
black = "^24.0"
flake8 = "^7.0"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
